# log2telegram

./: .gitignore  Dockerfile  README.md  dev-run-bot.sh  docker-build.sh  docker-compose.yaml  docker-runner-bot.sh  pyproject.toml
.github/workflows/: python-publish.yml
