[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log2telegram"
version = "0.1"
description = "A CLI tool to monitor a file and send updates to Telegram."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "python-dotenv"]

requires-python = ">=3.8"

scripts = { log2telegram = "log2telegram.main:main" }